--- a/src/aceinternal/gamelogic/gamelogic.vcxproj
+++ b/src/aceinternal/gamelogic/gamelogic.vcxproj
@@ -142,7 +142,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./inc;./src;./src/resource;../share/inc;../logger/inc;../netstream/inc;../scene/inc;../common/material-cpp;../common/cachesys/inc;../common/inc;../cache/inc;../terminal/inc;../simplexml/inc;../../../dep/boost_1_60_0/;../../../dep/ACE_wrappers/;../../../dep/protobuf-2.6.1/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./inc;./src;./src/resource;../share/inc;../logger/inc;../netstream/inc;../scenex/inc;../common/material-cpp;../common/cachesys/inc;../common/inc;../cache/inc;../terminal/inc;../simplexml/inc;../../../dep/boost_1_60_0/;../../../dep/ACE_wrappers/;../../../dep/protobuf-2.6.1/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;GAMELOGIC_EXPORTS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -153,7 +153,7 @@
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>share.lib;logger.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;simplexml.lib;../../../dep/ACE_wrappers/lib/ACEd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>share.lib;logger.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;simplexml.lib;../../../dep/ACE_wrappers/lib/ACEd.lib;pool.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);../../../dep/boost_1_60_0/lib64-msvc-14.0/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -188,7 +188,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>./inc;./src;./src/resource;../typedef/inc;../share/inc;../logger/inc;../scene/inc;../common/material-cpp;../../../common/inc;../cache/inc;../../../common/material-cpp;../terminal/inc;../simplexml/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./inc;./src;./src/resource;../typedef/inc;../share/inc;../logger/inc;../scenex/inc;../common/material-cpp;../../../common/inc;../cache/inc;../../../common/material-cpp;../terminal/inc;../simplexml/inc;../poo/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;GAMELOGIC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
