move plugin debug

--- a/src/aceinternal/manage_move/ManageMove.vcxproj
+++ b/src/aceinternal/manage_move/ManageMove.vcxproj
@@ -156,6 +156,7 @@
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
+      <OutputFile>$(OutDir)\modules\$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
       <Command>
